# mongodb-agent-ai

./: .gitignore  .gitmessage  ARCHITECTURE_DIAGRAM.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  QUICK_START.md  README.html  README.md  SECURITY.md  SETUP_GUIDE.html  api-reference.html  architecture.html  custom_server.py  index.html  installation.html  mongodb_agent_ai-1.0.0-py3-none-any.whl  mongodb_agent_ai-1.0.1-py3-none-any.whl  pyproject.toml  semantic-models.html  server.py  setup.py  start_custom_server.sh  start_server.sh  troubleshooting.html
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.html  architecture.html  comparison.html  configuration.html  getting-started.html  index.html  installation.html  semantic-models.html  troubleshooting.html  usage.html
examples/: basic_query.py  test_connection.py
scripts/: setup.sh  start_custom_server.sh  start_server.sh
semantic_models/: b2btransaction_semantic_model_template.yaml  example_collection.yaml
src/mongodb_agent/: README_SEPARATION.md  __init__.py  agent.py  api.py  cli.py  config.py  graph.py  index.html  server.py  state.py
src/mongodb_agent/nodes/: __init__.py  output_parser.py  query_executor.py  query_refiner.py  router.py  selector.py
src/mongodb_agent/prompts/: __init__.py
src/mongodb_agent/semantic_models/: SLShippingDocuments_semantic_model_convert_V4.yaml  TestCollection.yaml  __init__.py  b2btransaction_semantic_model_template.yaml  loader.py
src/mongodb_agent/services/: __init__.py  direct_client.py  llm.py  mcp_client.py  mongodb_router.py  vector_db.py
src/mongodb_agent/utils/: __init__.py  parsers.py  token_cache.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_integration.py  test_output_parser.py  test_query_executor.py  test_query_refiner.py  test_router.py  test_selector.py
